Finish base framework functionality

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,10 @@
     "linebreak-style": "off",
     "arrow-parens":"off",
     "comma-dangle":"off",
-    "require-jsdoc": "off"
+    "require-jsdoc": "off",
+    "no-trailing-spaces":"warn",
+    "eol-last": "warn",
+    "operator-linebreak": "off"
   },
   "extends": [
     "eslint:recommended",
